--- a/Mean_Normalization_and_Data_Separation.ipynb
+++ b/Mean_Normalization_and_Data_Separation.ipynb
@@ -31,17 +31,30 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ujUpYGC_Hkod"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ujUpYGC_Hkod",
+        "outputId": "742a8a03-7bb7-41cb-abdf-a7bb2b82d3bc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1000, 20)\n"
+          ]
+        }
+      ],
       "source": [
         "# import NumPy into Python\n",
-        "\n",
+        "import numpy as np\n",
         "\n",
         "# Create a 1000 x 20 ndarray with random integers in the half-open interval [0, 5001).\n",
-        "X =\n",
+        "X = np.random.rand(1000,20) * 5000\n",
         "\n",
-        "# print the shape of X\n"
+        "# print the shape of X\n",
+        "print(X.shape)"
       ]
     },
     {
@@ -61,15 +74,36 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "EMaL9q9eHkoi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EMaL9q9eHkoi",
+        "outputId": "1b40a1e0-a1f0-4f74-b26d-53d14c1c67e8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2480.85025483 2538.75982323 2451.10128315 2472.31048148 2452.16658641\n",
+            " 2518.54042409 2459.21828762 2539.50731467 2516.95355815 2483.99639078\n",
+            " 2485.83518773 2484.34268601 2462.95545925 2539.68446492 2617.57777014\n",
+            " 2466.48549219 2554.68187887 2514.61633351 2531.1834544  2474.30486188]\n",
+            "[1427.44101533 1394.75427319 1428.32997867 1473.87833438 1464.47158246\n",
+            " 1421.96523949 1423.97829633 1423.77220414 1444.3436816  1462.09365523\n",
+            " 1458.9423471  1450.64539287 1458.69550763 1437.10120205 1439.49979012\n",
+            " 1428.88059299 1423.43703815 1427.5944411  1459.79634344 1468.62236935]\n"
+          ]
+        }
+      ],
       "source": [
         "# Average of the values in each column of X\n",
-        "ave_cols =\n",
+        "ave_cols = X.mean(axis=0)\n",
+        "print(ave_cols)\n",
         "\n",
         "# Standard Deviation of the values in each column of X\n",
-        "std_cols ="
+        "std_cols = X.std(axis=0)\n",
+        "print(std_cols)"
       ]
     },
     {
@@ -85,14 +119,28 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "GfBmTfNvHkoj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GfBmTfNvHkoj",
+        "outputId": "bd3e7f92-2326-4c78-af3f-6cb772bf86c0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(20,)\n",
+            "(20,)\n"
+          ]
+        }
+      ],
       "source": [
         "# Print the shape of ave_cols\n",
+        "print(ave_cols.shape)\n",
         "\n",
-        "\n",
-        "# Print the shape of std_cols\n"
+        "# Print the shape of std_cols\n",
+        "print(std_cols.shape)"
       ]
     },
     {
@@ -113,7 +161,7 @@
       "outputs": [],
       "source": [
         "# Mean normalize X\n",
-        "X_norm ="
+        "X_norm = (X-ave_cols)/std_cols"
       ]
     },
     {
@@ -129,17 +177,32 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "L6xwjeAeHkom"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L6xwjeAeHkom",
+        "outputId": "eb45d2dd-1615-4097-aff4-f5275c3d04ce"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4.902744876744691e-17\n",
+            "-1.7328002302235093\n",
+            "1.7290879545110553\n"
+          ]
+        }
+      ],
       "source": [
         "# Print the average of all the values of X_norm\n",
-        "\n",
+        "print(X_norm.mean())\n",
         "\n",
         "# Print the average of the minimum value in each column of X_norm\n",
+        "print(X_norm.min(axis=0).mean())\n",
         "\n",
-        "\n",
-        "# Print the average of the maximum value in each column of X_norm\n"
+        "# Print the average of the maximum value in each column of X_norm\n",
+        "print(X_norm.max(axis=0).mean())"
       ]
     },
     {
@@ -169,9 +232,24 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SiUYb0SoHkoo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SiUYb0SoHkoo",
+        "outputId": "89ae67c2-c0a7-4fcd-8063-dac35f8224f9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4, 1, 3, 0, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
       "source": [
         "# We create a random permutation of integers 0 to 4\n",
         "np.random.permutation(5)"
@@ -192,12 +270,29 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0NOjpUadHkoq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0NOjpUadHkoq",
+        "outputId": "3080e8d7-b4b4-4ca4-f223-8bf04d85002f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[842 209 910 158 436 985   1 479  62 579 146 169 351 705 549 999 459 755\n",
+            " 433 576 310 218 887 800 449 929 137 285 832 578 254 649 654 344 345 208\n",
+            " 898 112 627  45 255 178 123 693  90 658 948 862 119 758 395 996 822 244\n",
+            " 836 831 574  97 586 946 534 472 603 230 142 130 703 404 748 772 224 713\n",
+            " 855 376  89 714  95 101 515   4 136 238 722 413 795 568 814 333 850 588\n",
+            " 526 598 176 857 870 981 216 522 422 619]\n"
+          ]
+        }
+      ],
       "source": [
         "# Create a rank 1 ndarray that contains a random permutation of the row indices of `X_norm`\n",
-        "row_indices ="
+        "row_indices = np.random.permutation(X_norm.shape[0])\n"
       ]
     },
     {
@@ -222,13 +317,13 @@
         "\n",
         "\n",
         "# Create a Training Set\n",
-        "X_train =\n",
+        "X_train = X_norm[row_indices[:600]]\n",
         "\n",
         "# Create a Cross Validation Set\n",
-        "X_crossVal =\n",
+        "X_crossVal = X_norm[row_indices[600:800]]\n",
         "\n",
         "# Create a Test Set\n",
-        "X_test ="
+        "X_test = X_norm[row_indices[800:]]"
       ]
     },
     {
@@ -244,17 +339,32 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "nFsD3-IKHkor"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nFsD3-IKHkor",
+        "outputId": "76d2f332-9f0a-4d8f-b64e-909b23cb591a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(600, 20)\n",
+            "(200, 20)\n",
+            "(200, 20)\n"
+          ]
+        }
+      ],
       "source": [
         "# Print the shape of X_train\n",
-        "\n",
+        "print(X_train.shape)\n",
         "\n",
         "# Print the shape of X_crossVal\n",
+        "print(X_crossVal.shape)\n",
         "\n",
-        "\n",
-        "# Print the shape of X_test\n"
+        "# Print the shape of X_test\n",
+        "print(X_test.shape)"
       ]
     },
     {
